force-app/main/default/objects/CTRCommittee__mdt.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>TOP/LABIX</fullName>
                    <default>true</default>
                    <label>TOP/LABIX</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>TOP/LABIX/TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditRating__c</fullName>
        <label>CreditRating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>EmployeeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSKem__c</fullName>
        <label>JSKem</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LABIX__c</fullName>
        <label>LABIX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TLB__c</fullName>
        <label>TLB</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOP__c</fullName>
        <label>TOP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPX__c</fullName>
        <label>TPX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSR__c</fullName>
        <label>TSR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSV__c</fullName>
        <label>TSV</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXIndia__c</fullName>
        <label>TXIndia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXTH__c</fullName>
        <label>TXTH</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CTRCommittee</label>
</CustomObject>